--- a/content/courses/5-step-foundation/5-step-foundation.mdx
+++ b/content/courses/5-step-foundation/5-step-foundation.mdx
@@ -85,30 +85,6 @@ Next.js uses react which is a really cool framework that uses components for sty
 
 These are the 3 essentials every site needs out of the box. To use them just reference that you use shadecn button, card, and input components and add them in places you need. To find more components check out this site: [Entire Library Here](https://ui.shadcn.com/docs/components)
 
-## 5. 
-
-
-
-
-<PromptSection title="Copy this into Cursor / Windsurf">
-
-Create a highly modular Next.js folder structure.
-I need a 'features' folder in the root. 
-Inside 'features', create subfolders for 'auth', 'dashboard', and 'marketing'. 
-Each feature folder should have separate 'components', 'hooks', and 'actions' directories.
-
-</PromptSection>
-
-<CodeWindow title="app/page.tsx">
-
-```tsx
-export default function Page() {
-  const name = "Next.js";
-  return <h1>Hello {name}</h1>;
-}
-```
-</CodeWindow>
-
 ## 5. Organization
 
 Finally, we need to know where to put our files so our project doesn't become a mess as it grows. We separate our **Pages** (what the user navigates to) from our **Components** (the building blocks used to build those pages).
@@ -130,44 +106,99 @@ Finally, we need to know where to put our files so our project doesn't become a 
 * **components**: Your custom site parts (Navbar, Footer, Hero Section).
 * **lib**: Helper functions and settings.
 
-This structure allows your app to grow to hundreds of pages without getting confusing. Now you are ready to start building!
+This structure allows your app to grow to hundreds of pages without getting confusing. 
+
+We will go into more detail about how to setup specifcs for the type of app you create later. Now you are ready to start building!
 
 Instead of manually creating these folders one by one, we can use AI to set this up instantly.
 
-<PromptSection title="Copy this into Cursor / Windsurf">
-You are an expert Next.js Architect. Your goal is to initialize a scalable Next.js application following a strict "Feature-Based" architecture pattern. 
+## Prompt Section
 
-Please execute the following 5-Step Foundation plan sequentially. Stop if you encounter errors, but otherwise proceed through all steps.
+For each course, I will provide a copy and paste cursor ready propmt at the end. This will allow you to take these principles and apply them to you site right away.
 
-Step 1: Initialization & Framework
-1. Initialize a new Next.js project in the current directory (or a folder named 'my-app' if the directory is not empty) using: `pnpm create next-app@latest . --yes`.
-   - Use TypeScript, Tailwind CSS, ESLint, and App Router.
-   - Do NOT use the `src/` directory (keep `app/` in root).
-2. Initialize shadcn/ui immediately after: `pnpm dlx shadcn@latest init`.
-   - Use "New York" style, "Zinc" base color, and CSS variables.
+You can edit them to be more specific to your site's structure and style and them copy from there. 
 
-Step 2: Component Installation
-Install the following essential shadcn components using `pnpm dlx shadcn@latest add`:
-- button
-- card
-- input
+<PromptSection title="Copy this into Cursor">
 
-Step 3: Folder Architecture (Crucial)
-Refactor the folder structure to be highly modular. Create the following directory tree:
-- /components/ui (Keep shadcn primitives here)
-- /components (For shared global components like Navbar, Footer)
-- /lib/utils.ts (Keep shadcn utils here)
+```
+# Role
+You are a Principal Frontend Architect specializing in Next.js 16 (App Router), TypeScript, and Tailwind CSS. You are known for strict file organization and adherence to "Clean Code" principles.
 
+# Objective
+Execute the following 5-Step Foundation Plan to scaffold a production-grade application. 
+**Constraint:** Execute these steps sequentially. Stop and ask for user confirmation only if a critical error occurs.
 
-Step 4: Styling
-Update `app/globals.css`. 
-- Remove the default Next.js Vercel background patterns.
-- Set the global background to white (`#ffffff`) and text to a dark slate (`#0f172a`) for a clean, modern aesthetic.
-- Ensure the font family is set to a standard clean sans-serif (Inter or system-ui).
+# Project Scope
+- **Framework:** Next.js 16 (App Router)
+- **Language:** TypeScript
+- **Styling:** Tailwind CSS + Global CSS variables
+- **UI Library:** shadcn/ui (New York Style, Zinc Base)
+- **Package Manager:** pnpm
 
-Step 5: Routes & Pages
-Create the following route structure in the `app` directory with basic placeholder content (Use a simple functional component for each):
-1. `app/about/page.tsx`: Title "About Us", styling: modern clean text.
-2. `app/contact/page.tsx`: Title "Contact", styling: modern clean text.
-3. Update `app/layout.tsx`: Ensure it wraps children correctly. (Bonus: If possible, add a placeholder Navbar in the layout that links to Home, About, and Contact).
+---
+
+## Step 1: Initialization & Framework
+1. **Check Directory:** Check if the current directory is empty. 
+   - If empty, create the app here: `pnpm create next-app@latest . --yes --ts --tailwind --eslint --no-src --app --import-alias "@/*"`
+   - If not empty, create a folder: `pnpm create next-app@latest my-app --yes --ts --tailwind --eslint --no-src --app --import-alias "@/*"` and `cd` into it.
+   - *Critical Constraint:* Ensure we are NOT using the `src/` directory. `app/` must be in the root.
+2. **Initialize shadcn/ui:**
+   - Run: `pnpm dlx shadcn@latest init`
+   - **Configuration Rules:** - Style: New York
+     - Base Color: Zinc
+     - CSS Variables: Yes
+
+## Step 2: Component Installation
+Install the core primitives immediately to ensure the design system works:
+`pnpm dlx shadcn@latest add button card input`
+
+## Step 3: Folder Architecture (Refactor)
+Analyze the file structure. Refactor or create files to strictly match this schema:
+
+├── app/                  # Routes
+│   ├── layout.tsx
+│   ├── page.tsx
+│   ├── globals.css
+│   ├── about/            # Route: /about
+│   │   └── page.tsx
+│   └── contact/          # Route: /contact
+│       └── page.tsx
+├── components/           # Shared Components
+│   ├── ui/               # shadcn primitives (Button, Card, Input)
+│   ├── navbar.tsx        # Global Navigation
+│   └── footer.tsx        # Global Footer
+└── lib/
+    └── utils.ts          # Helper functions (cn)
+
+## Step 4: Styling (Global Reset)
+Rewrite `app/globals.css`.
+1. **Clean Slate:** Remove all default Vercel/Next.js background patterns/gradients.
+2. **Theming:**
+   - Set global `body` background to White (`#ffffff`).
+   - Set global `body` text to Dark Slate (`#0f172a`).
+3. **Typography:** Ensure `font-family` defaults to `ui-sans-serif` or `Inter` (via `next/font/google`).
+
+## Step 5: Routes & Pages
+Generate the following file content using React Server Components (RSC):
+
+1. **`app/layout.tsx`**:
+   - Must import and implement the `Navbar` component.
+   - Must wrap children in a semantic `<main>` tag.
+2. **`components/navbar.tsx`**:
+   - Create a simple responsive Flexbox navbar.
+   - Use `next/link`.
+   - Links: Home (`/`), About (`/about`), Contact (`/contact`).
+   - Style: Minimalist, border-bottom `border-border`.
+3. **`app/about/page.tsx`**:
+   - Title: "About Us"
+   - Content: "We are building the future of web development."
+4. **`app/contact/page.tsx`**:
+   - Title: "Contact"
+   - Content: "Get in touch with our team."
+   - Component: Render a dummy Contact Form using the `Card`, `Input`, and `Button` components installed in Step 2.
+
+# Execution Order
+Please begin by analyzing the current directory state and executing **Step 1**.
+```
+
 </PromptSection>
